infrastructure/dashboard/dashboard-skiplogin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    template:
        spec:
            containers:
                - name: kubernetes-dashboard
                  args:
                      - --enable-skip-login
