infrastructure/dashboard/dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: kubernetes-dashboard
---
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 443
          targetPort: 8443
    selector:
        k8s-app: kubernetes-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        k8s-app: kubernetes-dashboard
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: kubernetes-dashboard
    template:
        metadata:
            labels:
                k8s-app: kubernetes-dashboard
        spec:
            containers:
                - args:
                      - --auto-generate-certificates
                      - --namespace=kubernetes-dashboard
                  image: kubernetesui/dashboard:v2.2.0
                  imagePullPolicy: Always
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 8443
                          scheme: HTTPS
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  name: kubernetes-dashboard
                  ports:
                      - containerPort: 8443
                        protocol: TCP
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsGroup: 2001
                      runAsUser: 1001
                  volumeMounts:
                      - mountPath: /certs
                        name: kubernetes-dashboard-certs
                      - mountPath: /tmp
                        name: tmp-volume
            nodeSelector:
                kubernetes.io/os: linux
            serviceAccountName: kubernetes-dashboard
            tolerations:
                - effect: NoSchedule
                  key: node-role.kubernetes.io/master
            volumes:
                - name: kubernetes-dashboard-certs
                  secret:
                      secretName: kubernetes-dashboard-certs
                - emptyDir: {}
                  name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    ports:
        - port: 8000
          targetPort: 8000
    selector:
        k8s-app: dashboard-metrics-scraper
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        k8s-app: dashboard-metrics-scraper
    name: dashboard-metrics-scraper
    namespace: kubernetes-dashboard
spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            k8s-app: dashboard-metrics-scraper
    template:
        metadata:
            annotations:
                seccomp.security.alpha.kubernetes.io/pod: runtime/default
            labels:
                k8s-app: dashboard-metrics-scraper
        spec:
            containers:
                - image: kubernetesui/metrics-scraper:v1.0.6
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 8000
                          scheme: HTTP
                      initialDelaySeconds: 30
                      timeoutSeconds: 30
                  name: dashboard-metrics-scraper
                  ports:
                      - containerPort: 8000
                        protocol: TCP
                  securityContext:
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      runAsGroup: 2001
                      runAsUser: 1001
                  volumeMounts:
                      - mountPath: /tmp
                        name: tmp-volume
            nodeSelector:
                kubernetes.io/os: linux
            serviceAccountName: kubernetes-dashboard
            tolerations:
                - effect: NoSchedule
                  key: node-role.kubernetes.io/master
            volumes:
                - emptyDir: {}
                  name: tmp-volume
