infrastructure/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kubernetes-dashboard
    namespace: kubernetes-dashboard
    annotations:
        kubernetes.io/ingress.class: traefik
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    rules:
        - host: dashboard.home.nix
          http:
              paths:
                  - backend:
                        service:
                            name: kubernetes-dashboard
                            port:
                                number: 443
                    path: /
                    pathType: ImplementationSpecific
    # tls:
    #   - hosts:
    #       - grpc.bite.martijnj.nl
    #     secretName: grpc-bite-martijnj-nl-tls
